--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -257,7 +257,9 @@
     <ClCompile Include="callbacks.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleGaussianGenerator.cpp" />
     <ClCompile Include="ParticleGenerator.cpp" />
+    <ClCompile Include="ParticleNormalGenerator.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="RenderUtils.cpp" />
     <ClCompile Include="Render\Camera.cpp" />
@@ -269,7 +271,9 @@
     <ClInclude Include="callbacks.hpp" />
     <ClInclude Include="core.hpp" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleGaussianGenerator.h" />
     <ClInclude Include="ParticleGenerator.h" />
+    <ClInclude Include="ParticleNormalGenerator.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="RenderUtils.hpp" />
     <ClInclude Include="Render\Camera.h" />
