--- a/skeleton/game.vcxproj.filters
+++ b/skeleton/game.vcxproj.filters
@@ -15,6 +15,8 @@
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="ParticleGenerator.cpp" />
+    <ClCompile Include="ParticleNormalGenerator.cpp" />
+    <ClCompile Include="ParticleGaussianGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.hpp" />
@@ -32,6 +34,8 @@
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="ParticleGenerator.h" />
+    <ClInclude Include="ParticleNormalGenerator.h" />
+    <ClInclude Include="ParticleGaussianGenerator.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Render">
