--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -259,8 +259,9 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleGaussianGenerator.cpp" />
     <ClCompile Include="ParticleGenerator.cpp" />
-    <ClCompile Include="ParticleNormalGenerator.cpp" />
+    <ClCompile Include="ParticleUniformGenerator.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="RainGenerator.cpp" />
     <ClCompile Include="RenderUtils.cpp" />
     <ClCompile Include="Render\Camera.cpp" />
     <ClCompile Include="Render\Render.cpp" />
@@ -273,8 +274,9 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleGaussianGenerator.h" />
     <ClInclude Include="ParticleGenerator.h" />
-    <ClInclude Include="ParticleNormalGenerator.h" />
+    <ClInclude Include="ParticleUniformGenerator.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="RainGenerator.h" />
     <ClInclude Include="RenderUtils.hpp" />
     <ClInclude Include="Render\Camera.h" />
     <ClInclude Include="Render\Render.h" />
